@@ -8,14 +8,19 @@
 	<Runtime>
 		<Import assembly="prj2make-sharp-lib.dll"/>
 	</Runtime>
-	<Extension path="/SharpDevelop/Workbench/MainMenu/File">
-		<MenuItem id = "ImportSeparator" insertafter="SaveAll" _label = "-" />
-		<MenuItem id = "ImportSolution"
-			 insertafter="ImportSeparator"
-			 insertbefore="RecentSeparator"
-		          _label = "_Import Visual Studio .NET Project"
-			  description = "Imports solutions created with MS Visual Studio"
-		          class = "MonoDevelop.Commands.ImportPrj"/>
+	
+	<Extension path = "/SharpDevelop/Commands">
+		<Command id = "MonoDevelop.Prj2Make.Commands.ImportSolution"
+			_label = "_Import Visual Studio .NET Project"
+			defaultHandler = "MonoDevelop.Prj2Make.ImportPrj"
+			description = "Imports solutions created with MS Visual Studio" />
 	</Extension>
-</AddIn	>
+	
+	<Extension path="/SharpDevelop/Workbench/MainMenu/File">
+		<SeparatorItem id = "ImportSeparator" insertafter="MonoDevelop.Commands.FileCommands.ReloadFile" />
+		<CommandItem id = "MonoDevelop.Prj2Make.Commands.ImportSolution"
+			 insertafter="ImportSeparator"
+			 insertbefore="RecentSeparator" />
+	</Extension>
+</AddIn>
 
